@@ -41,6 +41,7 @@ Option                                  Effect
 -h      print this help message and exit
 -i      Inspect interactively after running script (also PYTHONINSPECT=x) and
         force prompts, even if stdin appears not to be a terminal
+-m mod  run library module as a script (terminates option list
 -O      optimize generated bytecode (a tad; also PYTHONOPTIMIZE=x)
 -OO     remove doc-strings in addition to the -O optimizations
 -Q arg  division options: -Qold (default), -Qwarn, -Qwarnall, -Qnew
@@ -51,6 +52,7 @@ Option                                  Effect
 -W arg : warning control (arg is action:message:category:module:lineno)
 -x      Skip first line of source, allowing use of non-unix Forms of #!cmd
 -?      Help!
+-3      warn about Python 3.x incompatibilities
 -c      Specify the command to execute (see next section). This terminates the
 command option list (following options are passed as arguments to the command).
         the name of a python file (.py) to execute read from stdin.
