@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Add -3 option to the interpreter to warn about features that are
+  deprecated and will be changed/removed in Python 3.0.
+
 - Patch #1686487: you can now pass any mapping after '**' in function
   calls.
 
